@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "from scipy.signal import fftconvolve, convolve\n",
     "from scipy.interpolate import InterpolatedUnivariateSpline\n",
-    "from numpy.testing import (assert_, assert_almost_equal)"
+    "from numpy.testing import assert_, assert_almost_equal"
    ]
   },
   {
@@ -21,8 +21,9 @@
    "outputs": [],
    "source": [
     "from matplotlib.pyplot import *\n",
+    "\n",
     "%matplotlib inline\n",
-    "matplotlib.rcParams['figure.figsize'] = (20,15)"
+    "matplotlib.rcParams[\"figure.figsize\"] = (20, 15)"
    ]
   },
   {
@@ -31,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "moto = np.loadtxt('fit_theoretical.txt')\n",
+    "moto = np.loadtxt(\"fit_theoretical.txt\")\n",
     "moto_x, moto_y = np.hsplit(moto, 2)\n",
     "moto_x = moto_x.flatten()\n",
     "moto_y = moto_y.flatten()"
@@ -47,7 +48,12 @@
     "    resolution /= 100\n",
     "    gaussnum = 51\n",
     "    gaussgpoint = (gaussnum - 1) / 2\n",
-    "    gauss = lambda x, s: 1. / s / np.sqrt(2 * np.pi) * np.exp(-0.5 * x**2 / s / s)\n",
+    "    gauss = (\n",
+    "        lambda x, s: 1.0\n",
+    "        / s\n",
+    "        / np.sqrt(2 * np.pi)\n",
+    "        * np.exp(-0.5 * x**2 / s / s)\n",
+    "    )\n",
     "\n",
     "    lowQ = np.min(qq)\n",
     "    highQ = np.max(qq)\n",
@@ -56,15 +62,21 @@
     "\n",
     "    start = np.log10(lowQ) - 6 * resolution / 2.35482\n",
     "    finish = np.log10(highQ * (1 + 6 * resolution / 2.35482))\n",
-    "    interpnum = np.round(np.abs(1 * (np.abs(start - finish)) / (1.7 * resolution / 2.35482 / gaussgpoint)))\n",
+    "    interpnum = np.round(\n",
+    "        np.abs(\n",
+    "            1\n",
+    "            * (np.abs(start - finish))\n",
+    "            / (1.7 * resolution / 2.35482 / gaussgpoint)\n",
+    "        )\n",
+    "    )\n",
     "    xtemp = np.linspace(start, finish, interpnum)\n",
-    "    \n",
+    "\n",
     "    gauss_x = np.linspace(-1.7 * resolution, 1.7 * resolution, gaussnum)\n",
     "    gauss_y = gauss(gauss_x, resolution / (2 * np.sqrt(2 * np.log(2))))\n",
     "    xlin = np.power(10, xtemp)\n",
     "    rvals = abeles(xlin, layer)\n",
-    "    smeared_rvals = convolve(rvals, gauss_y, mode='same')\n",
-    "    interpolator = InterpolatedUnivariateSpline (xlin, smeared_rvals, k=3)\n",
+    "    smeared_rvals = convolve(rvals, gauss_y, mode=\"same\")\n",
+    "    interpolator = InterpolatedUnivariateSpline(xlin, smeared_rvals, k=3)\n",
     "    smeared_output = interpolator(qq)\n",
     "    smeared_output /= np.sum(gauss_y)\n",
     "    return smeared_output"
@@ -76,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resolution = 5.\n",
+    "resolution = 5.0\n",
     "qq = np.linspace(0.005, 0.3, 1000)\n",
     "layer = np.array([1, 1, 0, 0, 2.07, 0, 0, 3, 400, 3.47, 0, 3])"
    ]
@@ -87,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = res(qq, layer, resolution=5.)"
+    "r = res(qq, layer, resolution=5.0)"
    ]
   },
   {
@@ -107,8 +119,8 @@
     }
    ],
    "source": [
-    "plot(moto_x, moto_y*moto_x**4, qq, r*qq**4)\n",
-    "yscale('log')"
+    "plot(moto_x, moto_y * moto_x**4, qq, r * qq**4)\n",
+    "yscale(\"log\")"
    ]
   },
   {
@@ -138,7 +150,7 @@
     }
    ],
    "source": [
-    "plot(moto_x, 100 * (r - moto_y)/r)"
+    "plot(moto_x, 100 * (r - moto_y) / r)"
    ]
   },
   {
@@ -169,7 +181,7 @@
    ],
    "source": [
     "plot(qq, np.abs(r_pointbypoint - r), qq, 0.018 * r_pointbypoint)\n",
-    "yscale('log')"
+    "yscale(\"log\")"
    ]
   },
   {
