@@ -10,7 +10,12 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from refnx.reduce import catalogue, BatchReducer, PlatypusNexus, ReductionOptions\n",
+    "from refnx.reduce import (\n",
+    "    catalogue,\n",
+    "    BatchReducer,\n",
+    "    PlatypusNexus,\n",
+    "    ReductionOptions,\n",
+    ")\n",
     "from refnx.dataset import ReflectDataset"
    ]
   },
@@ -29,9 +34,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_FOLDER = '../test/'\n",
-    "BATCH_FILE = './reduction.xlsx'\n",
-    "REBIN_PERCENT = 2.\n",
+    "DATA_FOLDER = \"../test/\"\n",
+    "BATCH_FILE = \"./reduction.xlsx\"\n",
+    "REBIN_PERCENT = 2.0\n",
     "\n",
     "reduction_options = ReductionOptions(rebin_percent=REBIN_PERCENT)"
    ]
@@ -42,9 +47,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reducer = BatchReducer(BATCH_FILE,\n",
-    "                       data_folder=DATA_FOLDER,\n",
-    "                       reduction_options=reduction_options)"
+    "reducer = BatchReducer(\n",
+    "    BATCH_FILE, data_folder=DATA_FOLDER, reduction_options=reduction_options\n",
+    ")"
    ]
   },
   {
@@ -64,7 +69,7 @@
    "source": [
     "ds1 = data.run(708).ds\n",
     "plt.plot(ds1.x, ds1.y)\n",
-    "plt.yscale('log')"
+    "plt.yscale(\"log\")"
    ]
   }
  ],
