@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs = glob.glob('*.xrdml')"
+    "fs = glob.glob(\"*.xrdml\")"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "datasets[0].plot()\n",
-    "plt.yscale('log')"
+    "plt.yscale(\"log\")"
    ]
   },
   {
